--- a/spectrumexample/package.json
+++ b/spectrumexample/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "redux-thunk-saga",
+  "name": "spectrumexample",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@adobe/react-spectrum": "^3.11.2",
+    "@spectrum-icons/workflow": "^3.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-aria": "^3.7.1",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
-    "redux": "^4.1.0",
-    "redux-observable": "^2.0.0",
-    "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0",
-    "rxjs": "^7.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
